# fastapi-template

./: Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
alembic/: env.py
app/: app.py  config.py  logger.py
app/auth/: dependencies.py  schemas.py  security.py
app/database/: core.py  dependencies.py  utils.py
app/database/models/: __init__.py
scripts/: gen_env.py
tests/: conftest.py  test_example.py
